# flower

./: .gitignore  README.md  flow-er.cabal  flower.cabal  index.html  params.json  stack.yaml
src/Applicative/: Strict.hs
src/Control/: Flower.hs
src/Control/Flower/: Applicative.hs  Apply.hs  Compose.hs  Functor.hs  Monad.hs
src/Control/Flower/Applicative/: Lazy.hs  Strict.hs
src/Control/Flower/Apply/: Lazy.hs  Strict.hs
src/Control/Flower/Functor/: Lazy.hs  Strict.hs
src/Control/Flower/Monad/: Lazy.hs  Strict.hs
src/Functor/: Lazy.hs  Strict.hs
test/: Spec.hs  doctests.hs
