name:                flower
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/expede/flower
license:             MIT
license-file:        LICENSE
author:              Brooklyn Zelenka
maintainer:          bez@brooklynzelenka.com
category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.24

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , flow >= 1.0 && 2
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans

test-suite flower-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , flower
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expede/flower.git
